# ai-ShaderToy

./: .gitignore  .gitmodules  CMakeLists.txt  ai-readme.md  build-exe.bat  run-d3d11-exe.bat  run-exe.bat  run-wallpaper-exe.bat
.codebuddy/agents/: reviewer.md
.codebuddy/commands/: git-and-push.md  git.md
.codebuddy/rules/: auto-review.mdc  docs-convention.mdc  read-ai-readme.mdc  use-cmd.mdc
Docs/: D3D11壁纸渲染后端.md  GPU性能优化方案.md  fake_file_lsp技术说明.md  shader-language-server内嵌方案.md  stoy_grammar.bnf  stoy文件格式设计.md  stoy模式架构说明.md  使用说明.md  内置HLSL智能提示方案.md  参考项目与技术方案.md  多Pass实现方案.md  开发阶段.md  技术架构与实现.md  虚拟文档转发方案记录.md  调试UI实现方案.md
Docs/有价值的讨论/: Tree-sitter增量解析原理与挑战.md
Docs/疑难问题记录/: 001-多进程帧率降半.md  002-Win11-24H2壁纸模式黑屏.md  003-DWM遮挡检测误判.md  README.md  _template.md
assets/: shadertoy_uniforms.hlsl
assets/shaders/: a_black_hole.json  a_happy_jumping.glsl  a_mandelbulb.glsl  a_raymarching_primitives.glsl  a_river_goes.json  a_seascape.glsl  a_self_reflect.glsl  a_sparks_drifting.glsl  a_star_nest.glsl  a_tiny_plane.json  a_zippy_zaps.glsl  default.glsl  my_noise_lab.glsl  my_sdf.json  test_hlsl_native.hlsl  texture_demo.glsl
assets/shaders/a_black_hole/: buf_a.glsl  buf_b.glsl  buf_c.glsl  buf_d.glsl  channels.json  image.glsl
assets/shaders/a_rhodium_liquid_carbon/: channels.json
assets/shaders/a_river_goes/: channels.json  image.glsl
assets/shaders/a_tiny_plane/: buf_b.glsl  channels.json
assets/shaders/multipass_demo/: buf_a.glsl  channels.json  image.glsl
assets/stoys/: feedback_demo.stoy  minimal.stoy
scripts/: build.bat
src/: app.rc  blit_renderer.cpp  blit_renderer.h  d3d11_blit_renderer.cpp  d3d11_blit_renderer.h  d3d11_multi_pass.cpp  d3d11_multi_pass.h  d3d11_renderer.cpp  d3d11_renderer.h  d3d11_shader_manager.cpp  d3d11_shader_manager.h  d3d11_texture_manager.cpp  d3d11_texture_manager.h  debug_ui.cpp  debug_ui.h  file_dialog.cpp  file_dialog.h  file_watcher.cpp  file_watcher.h  glsl_to_hlsl.cpp  glsl_to_hlsl.h  hlsl_fixup.cpp  hlsl_fixup.h  main.cpp  multi_pass.cpp  multi_pass.h  renderer.cpp  renderer.h  shader_manager.cpp  shader_manager.h  shader_project.cpp  shader_project.h  shadertoy_normalizer.cpp  shadertoy_normalizer.h  stoy_hlsl_generator.cpp  stoy_hlsl_generator.h  stoy_parser.cpp  stoy_parser.h  texture_manager.cpp  texture_manager.h  (+4 more)
stoy-vscode-plugin/: .gitignore  .vscodeignore  README.md  esbuild.js  language-configuration.json  package-lock.json  package.json  tsconfig.json
stoy-vscode-plugin/src/: extension.ts  fakeFileLsp.ts  fakeUriManager.ts  hlslBuiltins.ts  hlslGenerator.ts  hlslSymbolScanner.ts  logger.ts  positionMapper.ts  requestForwarder.ts  stoyParser.ts  symbolClassifier.ts  types.ts  virtualDocProvider.ts
stoy-vscode-plugin/src/server/: documentManager.ts  documentSymbolProvider.ts  dslCompletionProvider.ts  dslDefinitionProvider.ts  dslDiagnosticsProvider.ts  dslHoverProvider.ts  foldingRangeProvider.ts  hlslCompletionProvider.ts  hlslDefinitionProvider.ts  hlslHoverProvider.ts  semanticTokenProvider.ts  server.ts  utils.ts
stoy-vscode-plugin/syntaxes/: stoy.tmLanguage.json
tools/: batch_translate.bat  download_textures.html  json2dir.py  test_translate.bat
